tests/neg/i9740.check
-- [E186] Type Error: tests/neg/i9740.scala:10:9 -----------------------------------------------------------------------
10 |    case RecoveryCompleted => println("Recovery completed")            // error
   |         ^^^^^^^^^^^^^^^^^
   |         Implausible pattern:
   |         RecoveryCompleted  could match selector of type  object TypedRecoveryCompleted
   |         only if there is an `equals` method identifying elements of the two types.
-- [E186] Type Error: tests/neg/i9740.scala:15:9 -----------------------------------------------------------------------
15 |    case RecoveryCompleted =>             // error
   |         ^^^^^^^^^^^^^^^^^
   |         Implausible pattern:
   |         RecoveryCompleted  could match selector of type  TypedRecoveryCompleted
   |         only if there is an `equals` method identifying elements of the two types.
